fix(VToolbar): only apply scrollbar offset padding to fixed app-bar

--- a/packages/vuetify/src/components/VToolbar/VToolbar.sass
+++ b/packages/vuetify/src/components/VToolbar/VToolbar.sass
@@ -10,7 +10,6 @@
   justify-content: space-between
   max-width: 100%
   overflow: hidden
-  padding-inline-end: var(--v-scrollbar-offset)
   position: relative
   transition: $toolbar-transition
   transition-property: height, width, transform, max-width, left, right, top, bottom
